tests/NormalTests/paczka1/fuzzy1/69809181.err
Error in line 15: jZt S122 87,7
Error in line 18: jZt A951 18,4
Error in line 21: jZt S452 43,3
Error in line 1: S122 A951 1,1
Error in line 30: S122 S452 45,2
Error in line 29: krH S254 148,2
